[gd_scene load_steps=29 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Muzika.gd" type="Script" id=2]
[ext_resource path="res://Zvukovi/Muzika/LongLoop_LowGit.ogg" type="AudioStream" id=3]
[ext_resource path="res://Zvukovi/Muzika/LongLoop_HighGit.ogg" type="AudioStream" id=4]
[ext_resource path="res://Zvukovi/Muzika/LongLoop_MainMelody.ogg" type="AudioStream" id=5]
[ext_resource path="res://Zvukovi/Muzika/ShortLoop_MainMelodyHigh.ogg" type="AudioStream" id=6]
[ext_resource path="res://Zvukovi/Muzika/ShortLoop_TinySwells.ogg" type="AudioStream" id=7]
[ext_resource path="res://Zvukovi/Muzika/ShortLoop_Slide1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Zvukovi/Muzika/ShortLoop_GitChordsSloppy.ogg" type="AudioStream" id=9]
[ext_resource path="res://Zvukovi/Muzika/MedLoop_MainMelodyLow.ogg" type="AudioStream" id=10]
[ext_resource path="res://Zvukovi/Muzika/MedLoop_MainMelodyLowWobble.ogg" type="AudioStream" id=11]
[ext_resource path="res://Scripts/LevelChanging/LevelList.gd" type="Script" id=12]
[ext_resource path="res://Textures/white_eliptical_glow_001.png" type="Texture" id=13]
[ext_resource path="res://Textures/white_1080p.png" type="Texture" id=14]
[ext_resource path="res://Textures/black_1080p.png" type="Texture" id=15]
[ext_resource path="res://Fonts/menuTypewriter86_v01.fnt" type="BitmapFont" id=16]
[ext_resource path="res://Scripts/LevelChanging/Exit.gd" type="Script" id=17]
[ext_resource path="res://Textures/text_linija_001.png" type="Texture" id=18]
[ext_resource path="res://Textures/OverlayNoise_001.png" type="Texture" id=19]

[sub_resource type="Animation" id=1]

resource/name = "FromBlack"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("White:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Glow:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "FromBlackWithTitle"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("White:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Glow:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../LevelName:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.9, 2, 3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2, 3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("White:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("White:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.9 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Black:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.9, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("White:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Glow:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../LevelName:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 18 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Muzika" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 2 )

[node name="Baza1" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Baza2" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="LongLoopMainMelody" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ShortMainMelodyGitHigh" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ShortTinySwells" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ShortSlide1" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ShortGitChordsSloppy" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="MediumMainMelodyLow" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="MediumMainMelodyWobble" type="StreamPlayer" parent="Muzika"]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="LevelSpace" type="Node2D" parent="."]

script/script = ExtResource( 12 )

[node name="Fades" type="Node2D" parent="."]

process/pause_mode = 2
editor/display_folded = true

[node name="fades_animation_player" type="AnimationPlayer" parent="Fades"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/FromBlack = SubResource( 1 )
anims/FromBlackWithTitle = SubResource( 2 )
anims/ToBlack = SubResource( 3 )
anims/ToBlackThenBlack = SubResource( 4 )
anims/ToWhite = SubResource( 5 )
anims/ToWhiteThenBlack = SubResource( 6 )
anims/White = SubResource( 7 )
anims/nothing = SubResource( 8 )
next/FromBlack = "nothing"
next/FromBlackWithTitle = "nothing"
next/ToWhite = "ToBlack"
next/ToWhiteThenBlack = "FromBlack"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Glow" type="Sprite" parent="Fades"]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 13 )

[node name="White" type="Sprite" parent="Fades"]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 14 )

[node name="Black" type="Sprite" parent="Fades"]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 15 )

[node name="LevelName" type="Label" parent="."]

process/pause_mode = 2
visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -868.0
margin/top = -418.0
margin/right = -974.0
margin/bottom = -510.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="."]

process/pause_mode = 2
visibility/visible = false
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MAIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Exit" type="Control" parent="."]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 540.0
margin/right = 1000.0
margin/bottom = 580.0
script/script = ExtResource( 17 )

[node name="ExitBack" type="Sprite" parent="Exit"]

visibility/opacity = 0.75
texture = ExtResource( 15 )

[node name="ExitYes" type="Button" parent="Exit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = -499.0
margin/top = 0.0
margin/right = 43.0
margin/bottom = 124.0
custom_styles/hover = SubResource( 9 )
custom_fonts/font = ExtResource( 16 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Yes"
flat = true

[node name="ExitNo" type="Button" parent="Exit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 542.0
margin/bottom = 124.0
custom_styles/hover = SubResource( 9 )
custom_fonts/font = ExtResource( 16 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "No"
flat = true

[node name="Label" type="Label" parent="Exit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -708.0
margin/top = -163.0
margin/right = 725.0
margin/bottom = -71.0
custom_fonts/font = ExtResource( 16 )
text = "Quit to Main Menu?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 19 )

[connection signal="finished" from="Fades/fades_animation_player" to="." method="_on_fades_animation_player_finished"]

[connection signal="pressed" from="Exit/ExitYes" to="." method="_on_ExitYes_pressed"]

[connection signal="pressed" from="Exit/ExitNo" to="." method="_on_ExitNo_pressed"]


